@@ -22,55 +22,50 @@
 
 using GLib;
 
-namespace Vala {
+/**
+ * Base class for all code nodes that might be used as an expression.
+ */
+public abstract class Vala.Expression : CodeNode {
 	/**
-	 * Base class for all code nodes that might be used as an expression.
+	 * The static type of this expression.
+	 * 
+	 * The semantic analyzer computes this value.
 	 */
-	public abstract class Expression : CodeNode {
-		/**
-		 * The static type of this expression.
-		 * 
-		 * The semantic analyzer computes this value.
-		 */
-		public TypeReference static_type { get; set; }
-		
-		/*
-		 * The static type this expression is expected to have.
-		 *
-		 * The semantic analyzer computes this value, lambda expressions
-		 * use it.
-		 */
-		public TypeReference expected_type { get; set; }
-		
-		/**
-		 * The symbol this expression refers to.
-		 */
-		public Symbol symbol_reference { get; set; }
-		
-		/**
-		 * Specifies that this expression transfers ownership without a
-		 * receiver being present.
-		 *
-		 * The memory manager computes this value, the code generator
-		 * uses it.
-		 */
-		public bool ref_leaked { get; set; }
-		
-		/**
-		 * Specifies that this expression is expected to transfer
-		 * ownership but doesn't.
-		 *
-		 * The memory manager computes this value, the code generator
-		 * uses it.
-		 */
-		public bool ref_missing { get; set; }
-		
-		/**
-		 * Contains all temporary variables this expression requires
-		 * for execution.
-		 *
-		 * The code generator sets and uses them for memory management.
-		 */
-		public List<VariableDeclarator> temp_vars;
-	}
+	public TypeReference static_type { get; set; }
+	
+	/*
+	 * The static type this expression is expected to have.
+	 *
+	 * The semantic analyzer computes this value, lambda expressions use it.
+	 */
+	public TypeReference expected_type { get; set; }
+	
+	/**
+	 * The symbol this expression refers to.
+	 */
+	public Symbol symbol_reference { get; set; }
+	
+	/**
+	 * Specifies that this expression transfers ownership without a receiver
+	 * being present.
+	 *
+	 * The memory manager computes this value, the code generator uses it.
+	 */
+	public bool ref_leaked { get; set; }
+	
+	/**
+	 * Specifies that this expression is expected to transfer ownership but
+	 * doesn't.
+	 *
+	 * The memory manager computes this value, the code generator uses it.
+	 */
+	public bool ref_missing { get; set; }
+	
+	/**
+	 * Contains all temporary variables this expression requires for
+	 * execution.
+	 *
+	 * The code generator sets and uses them for memory management.
+	 */
+	public List<VariableDeclarator> temp_vars;
 }
